Small fixes in the swagger documentation
