# src/IO.Swagger/Controllers/TransferenciaSemCartaoApi.cs
@@ -59,7 +59,7 @@ namespace IO.Swagger.Controllers
             // return StatusCode(401);
 
             string exampleJson = null;
-            exampleJson = "{\n  \"InfTransacao\" : {\n    \"cdProc\" : \"029100\",\n    \"mensagemCliente\" : \"Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em tela.\",\n    \"nsu\" : \"000080247206\",\n    \"codMoeda\" : \"986\",\n    \"codOperadora\" : \"00000000914\",\n    \"dataLocal\" : \"1122\",\n    \"errorMessage\" : \"\",\n    \"valor\" : \"5000\",\n    \"horaLocal\" : \"151032\",\n    \"nsuResposta\" : \"820\",\n    \"dataHora\" : \"1122151032\"\n  },\n  \"InfConsultaConta\" : {\n    \"solicDoc\" : \"00\",\n    \"modalidadeDeposito\" : \"00\",\n    \"depositoVarejista\" : \"01\",\n    \"nomeCliente\" : \"Carl Edward Sagan\",\n    \"depositoIdentificado\" : \"00\",\n    \"habilitaDeposito\" : \"01\"\n  },\n  \"Cripto\" : {\n    \"hash\" : \"hash\"\n  },\n  \"Terminal\" : {\n    \"codEstab\" : \"000000000742673\",\n    \"tipo\" : \"008\",\n    \"id\" : \"05100004\"\n  }\n}";
+            exampleJson = "{\n  \"InfTransacao\" : {\n    \"cdProc\" : \"029100\",\n    \"mensagemCliente\" : \"Esta &eacute; uma mensagem para exibi&ccedil;&atilde;o em tela.\",\n    \"nsu\" : \"000080247206\",\n    \"codMoeda\" : \"986\",\n    \"codOperadora\" : \"00000000914\",\n    \"dataLocal\" : \"1122\",\n    \"errorMessage\" : \"\",\n    \"valor\" : \"5000\",\n    \"horaLocal\" : \"151032\",\n    \"nsuResposta\" : \"820\",\n    \"dataHora\" : \"1122151032\"\n  },\n  \"InfConsultaConta\" : {\n    \"solicDoc\" : \"00\",\n    \"numAgencia\" : \"4029\",\n    \"numConta\" : \"0082348296\",\n    \"modalidadeDeposito\" : \"00\",\n    \"depositoVarejista\" : \"01\",\n    \"nomeCliente\" : \"Carl Edward Sagan\",\n    \"cpfFavorecido\" : \"02358422785\",\n    \"ispb\" : \"01234567\",\n    \"depositoIdentificado\" : \"00\",\n    \"habilitaDeposito\" : \"01\",\n    \"codBanco\" : \"237\"\n  },\n  \"Cripto\" : {\n    \"hash\" : \"hash\"\n  },\n  \"Terminal\" : {\n    \"codEstab\" : \"000000000742673\",\n    \"tipo\" : \"008\",\n    \"id\" : \"05100004\"\n  }\n}";
             
             var example = exampleJson != null
             ? JsonConvert.DeserializeObject<ConsultaContaResp>(exampleJson)
