# src/IO.Swagger/wwwroot/swagger-original.json
@@ -2245,11 +2245,16 @@
         },
         "InfConsultaConta" : {
           "solicDoc" : "00",
+          "numAgencia" : "4029",
+          "numConta" : "0082348296",
           "modalidadeDeposito" : "00",
           "depositoVarejista" : "01",
           "nomeCliente" : "Carl Edward Sagan",
+          "cpfFavorecido" : "02358422785",
+          "ispb" : "01234567",
           "depositoIdentificado" : "00",
-          "habilitaDeposito" : "01"
+          "habilitaDeposito" : "01",
+          "codBanco" : "237"
         },
         "Cripto" : {
           "hash" : "hash"
@@ -2364,35 +2369,39 @@
             "valorParcela" : "000000005000",
             "qntParcelas" : "5",
             "tributos" : {
-              "taxaJurosMensal" : "0008094",
               "iof" : "0008094",
               "cetAnual" : "0008094",
+              "valorJuros" : "000000001099",
+              "taxaJurosAnual" : "0008094",
+              "ultimoVencimento" : "20200928",
+              "taxaValorIof" : "0005012",
+              "iofAdicional" : "0008094",
+              "taxaJurosMensal" : "0008094",
               "cetMensal" : "0008094",
               "valorTotalParcelas" : "000000500010",
               "valorSolicitado" : "000000000499",
               "dataContratacao" : "20200928",
-              "valorJuros" : "000000001099",
-              "taxaJurosAnual" : "0008094",
-              "ultimoVencimento" : "20200928",
-              "iofAdicional" : "0008094",
-              "primeiroVencimento" : "20200928"
+              "primeiroVencimento" : "20200928",
+              "taxaValorSolicitado" : "0000700"
             }
           }, {
             "valorParcela" : "000000005000",
             "qntParcelas" : "5",
             "tributos" : {
-              "taxaJurosMensal" : "0008094",
               "iof" : "0008094",
               "cetAnual" : "0008094",
+              "valorJuros" : "000000001099",
+              "taxaJurosAnual" : "0008094",
+              "ultimoVencimento" : "20200928",
+              "taxaValorIof" : "0005012",
+              "iofAdicional" : "0008094",
+              "taxaJurosMensal" : "0008094",
               "cetMensal" : "0008094",
               "valorTotalParcelas" : "000000500010",
               "valorSolicitado" : "000000000499",
               "dataContratacao" : "20200928",
-              "valorJuros" : "000000001099",
-              "taxaJurosAnual" : "0008094",
-              "ultimoVencimento" : "20200928",
-              "iofAdicional" : "0008094",
-              "primeiroVencimento" : "20200928"
+              "primeiroVencimento" : "20200928",
+              "taxaValorSolicitado" : "0000700"
             }
           } ],
           "limiteMinimoEmprestimo" : "000000500000",
@@ -3727,6 +3736,12 @@
           "example" : "05199999999",
           "description" : "Telefone do cliente favorecido da transação (11 dígitos = DDD com 0 quando número tem 8 dígitos, sem 0 quando número tem 9 dígitos).",
           "pattern" : "^\\d{11}$"
+        },
+        "ispb" : {
+          "type" : "string",
+          "example" : "01234567",
+          "description" : "Código da Intituição registrada no Sistema Brasileiro de Pagamentos. Campo obrigatório, para transações de Saque QR Code, afim de identificar a instituição parceira da transação.",
+          "pattern" : "^\\d{8}$"
         }
       },
       "description" : "Informações da requisição de consulta de conta do favorecido do depósito."
@@ -3769,16 +3784,51 @@
           "example" : "01",
           "description" : "Indica se a conta em questão permite Depósito Varejista  (00 = Não / 01 = Sim).",
           "enum" : [ "00", "01" ]
+        },
+        "codBanco" : {
+          "type" : "string",
+          "example" : "237",
+          "description" : "Código do banco utilizado na operação (3 dígitos).",
+          "pattern" : "^\\d{3}$"
+        },
+        "numAgencia" : {
+          "type" : "string",
+          "example" : "4029",
+          "description" : "Número da agência utilizada na operação.",
+          "pattern" : "^\\d+$"
+        },
+        "numConta" : {
+          "type" : "string",
+          "example" : "0082348296",
+          "description" : "Número da conta utilizada na operação.",
+          "pattern" : "^\\d+$"
+        },
+        "cpfFavorecido" : {
+          "type" : "string",
+          "example" : "02358422785",
+          "description" : "Número do CPF ou CNPJ do cliente favorecido da transação (11 dígitos ou 14 dígitos respectivamente).",
+          "pattern" : "^\\d{14}|\\d{11}$"
+        },
+        "ispb" : {
+          "type" : "string",
+          "example" : "01234567",
+          "description" : "Código da Intituição registrada no Sistema Brasileiro de Pagamentos. Campo obrigatório, para transações de Saque QR Code, afim de identificar a instituição parceira da transação.",
+          "pattern" : "^\\d{8}$"
         }
       },
       "description" : "Informações da resposta da requisição de consulta de conta do favorecido.",
       "example" : {
         "solicDoc" : "00",
+        "numAgencia" : "4029",
+        "numConta" : "0082348296",
         "modalidadeDeposito" : "00",
         "depositoVarejista" : "01",
         "nomeCliente" : "Carl Edward Sagan",
+        "cpfFavorecido" : "02358422785",
+        "ispb" : "01234567",
         "depositoIdentificado" : "00",
-        "habilitaDeposito" : "01"
+        "habilitaDeposito" : "01",
+        "codBanco" : "237"
       }
     },
     "infConsultaLimitesEmprestimoResp" : {
@@ -3894,35 +3944,39 @@
           "valorParcela" : "000000005000",
           "qntParcelas" : "5",
           "tributos" : {
-            "taxaJurosMensal" : "0008094",
             "iof" : "0008094",
             "cetAnual" : "0008094",
+            "valorJuros" : "000000001099",
+            "taxaJurosAnual" : "0008094",
+            "ultimoVencimento" : "20200928",
+            "taxaValorIof" : "0005012",
+            "iofAdicional" : "0008094",
+            "taxaJurosMensal" : "0008094",
             "cetMensal" : "0008094",
             "valorTotalParcelas" : "000000500010",
             "valorSolicitado" : "000000000499",
             "dataContratacao" : "20200928",
-            "valorJuros" : "000000001099",
-            "taxaJurosAnual" : "0008094",
-            "ultimoVencimento" : "20200928",
-            "iofAdicional" : "0008094",
-            "primeiroVencimento" : "20200928"
+            "primeiroVencimento" : "20200928",
+            "taxaValorSolicitado" : "0000700"
           }
         }, {
           "valorParcela" : "000000005000",
           "qntParcelas" : "5",
           "tributos" : {
-            "taxaJurosMensal" : "0008094",
             "iof" : "0008094",
             "cetAnual" : "0008094",
+            "valorJuros" : "000000001099",
+            "taxaJurosAnual" : "0008094",
+            "ultimoVencimento" : "20200928",
+            "taxaValorIof" : "0005012",
+            "iofAdicional" : "0008094",
+            "taxaJurosMensal" : "0008094",
             "cetMensal" : "0008094",
             "valorTotalParcelas" : "000000500010",
             "valorSolicitado" : "000000000499",
             "dataContratacao" : "20200928",
-            "valorJuros" : "000000001099",
-            "taxaJurosAnual" : "0008094",
-            "ultimoVencimento" : "20200928",
-            "iofAdicional" : "0008094",
-            "primeiroVencimento" : "20200928"
+            "primeiroVencimento" : "20200928",
+            "taxaValorSolicitado" : "0000700"
           }
         } ],
         "limiteMinimoEmprestimo" : "000000500000",
@@ -3957,18 +4011,20 @@
         "valorParcela" : "000000005000",
         "qntParcelas" : "5",
         "tributos" : {
-          "taxaJurosMensal" : "0008094",
           "iof" : "0008094",
           "cetAnual" : "0008094",
+          "valorJuros" : "000000001099",
+          "taxaJurosAnual" : "0008094",
+          "ultimoVencimento" : "20200928",
+          "taxaValorIof" : "0005012",
+          "iofAdicional" : "0008094",
+          "taxaJurosMensal" : "0008094",
           "cetMensal" : "0008094",
           "valorTotalParcelas" : "000000500010",
           "valorSolicitado" : "000000000499",
           "dataContratacao" : "20200928",
-          "valorJuros" : "000000001099",
-          "taxaJurosAnual" : "0008094",
-          "ultimoVencimento" : "20200928",
-          "iofAdicional" : "0008094",
-          "primeiroVencimento" : "20200928"
+          "primeiroVencimento" : "20200928",
+          "taxaValorSolicitado" : "0000700"
         }
       }
     },
@@ -5166,6 +5222,11 @@
           "example" : "05199999999",
           "description" : "Telefone do cliente que receberá o depósito (11 dígitos = DDD com 0 quando número tem 8 dígitos, sem 0 quando número tem 9 dígitos).",
           "pattern" : "^\\d{11}$"
+        },
+        "tipoConta" : {
+          "type" : "string",
+          "description" : "Tipo de conta do extrato (CC = conta corrente, CP = conta poupança, CS = conta salário).",
+          "enum" : [ "CC", "CP", "CS" ]
         }
       },
       "description" : "Informações da requisição de depósito."
@@ -6772,22 +6833,36 @@
           "example" : "000000500010",
           "description" : "Informações sobre o valor total da soma de todas parcelas (12 dígitos, incluindo centavos).",
           "pattern" : "^\\d{12}$"
+        },
+        "taxaValorSolicitado" : {
+          "type" : "string",
+          "example" : "0000700",
+          "description" : "Representa o quanto o valor solicitado representa sobre o valor financiado. (07 digitos, valor total = 70,00%)",
+          "pattern" : "^\\d{07}$"
+        },
+        "taxaValorIof" : {
+          "type" : "string",
+          "example" : "0005012",
+          "description" : "Representa o quanto o valor do iof representa sobre o valor financiado. (07 digitos, valor total = 50,12%)",
+          "pattern" : "^\\d{07}$"
         }
       },
       "description" : "Informações sobre cada parcela.",
       "example" : {
-        "taxaJurosMensal" : "0008094",
         "iof" : "0008094",
         "cetAnual" : "0008094",
+        "valorJuros" : "000000001099",
+        "taxaJurosAnual" : "0008094",
+        "ultimoVencimento" : "20200928",
+        "taxaValorIof" : "0005012",
+        "iofAdicional" : "0008094",
+        "taxaJurosMensal" : "0008094",
         "cetMensal" : "0008094",
         "valorTotalParcelas" : "000000500010",
         "valorSolicitado" : "000000000499",
         "dataContratacao" : "20200928",
-        "valorJuros" : "000000001099",
-        "taxaJurosAnual" : "0008094",
-        "ultimoVencimento" : "20200928",
-        "iofAdicional" : "0008094",
-        "primeiroVencimento" : "20200928"
+        "primeiroVencimento" : "20200928",
+        "taxaValorSolicitado" : "0000700"
       }
     },
     "cartaoPresenteProdutoObj_informacoes" : {
